Added method to update request pdf status
