# app/Enums/PdfRequestStatus.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Enums;
+
+enum PdfRequestStatus :string
+{
+    case ACEPTADO = "ACEPTADO";
+    case RECHAZADO = "RECHAZADO";
+}
