# app/Http/Requests/Request/PatchPdfRequestRequest.php
@@ -1,0 +1,46 @@
+<?php
+
+namespace App\Http\Requests\Request;
+
+use App\Enums\PdfRequestStatus;
+use App\Http\Messages\ErrorMessages;
+use App\Http\Responses\ApiResponse;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+use Illuminate\Validation\Rules\Enum;
+
+class PatchPdfRequestRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'status'=>['required', new Enum(PdfRequestStatus::class)],
+		];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(
+            ApiResponse::error(
+                ErrorMessages::UNPROCESSABLE_ENTITY,
+                $validator->errors(),
+                [],
+                422
+            )
+        );
+    }
+}
