# storage/api-docs/api-docs.json
@@ -2843,6 +2843,57 @@
                 }
             }
         },
+        "/api/requests_pdf/{id}": {
+            "put": {
+                "tags": [
+                    "Requests"
+                ],
+                "summary": "Update pdf request",
+                "operationId": "b78c87bab6d40a4e8da97d44cd1595e1",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the pdf file to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Updated pdf file status",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status"
+                                ],
+                                "properties": {
+                                    "status": {
+                                        "type": "string",
+                                        "enum": [
+                                            "ACEPTADO",
+                                            "RECHAZADO"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Pdf file status updated successfully"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/api/roles/{id}": {
             "get": {
                 "tags": [
